Name:                tagstream-conduit
Version:             0.5.5.3
Synopsis:            streamlined html tag parser
Description:
    Tag-stream is a library for parsing HTML//XML to a token stream.
    It can parse unstructured and malformed HTML from the web.
    It also provides an Enumeratee which can parse streamline html, which means it consumes constant memory.

    You can start from the `tests/Tests.hs` module to see what it can do.
Homepage:            http://github.com/yihuang/tagstream-conduit
License:             BSD3
License-file:        LICENSE
Author:              yihuang
Maintainer:          yi.codeplayer@gmail.com
Category:            Web, Conduit
Build-type:          Simple
Extra-source-files:    tests/Tests.hs
                     , Highlight.hs
                     , Parse.hs
                     , HighlightText.hs
                     , ParseText.hs
Cabal-version:       >=1.25

source-repository head
  type:     git
  location: git://github.com/yihuang/tagstream-conduit

library types
  exposed-modules: Text.HTML.TagStream.Types
                 , Str.ByteString
                 , Str.Text
                 , Builder.ByteString
                 , Builder.Text
                 , Parser.ByteString
                 , Parser.Text
  hs-source-dirs: types
  build-depends:       base >= 4 && < 5
                     , bytestring
                     , text
                     , conduit >= 1.2
                     , conduit-extra >= 1.1.0
                     , resourcet
                     , attoparsec >= 0.10
                     , blaze-builder
                     , xml-conduit >= 1.1.0.0
                     , data-default >= 0.5.0

library entities
  required-signatures: Str, Builder, Parser
  exposed-modules: Entities
  hs-source-dirs: entities
  build-depends:       base >= 4 && < 5
                     , bytestring
                     , text
                     , case-insensitive
                     , transformers >= 0.2
                     , conduit >= 1.2
                     , conduit-extra >= 1.1.0
                     , resourcet
                     , attoparsec >= 0.10
                     , blaze-builder
                     , xml-conduit >= 1.1.0.0
                     , data-default >= 0.5.0
                     , types

Library
  GHC-Options:       -Wall -O2
  Exposed-modules:     Text.HTML.TagStream
                     , Text.HTML.TagStream.ByteString
                     , Text.HTML.TagStream.Text
  Build-depends:       base >= 4 && < 5
                     , bytestring
                     , text
                     , case-insensitive
                     , transformers >= 0.2
                     , conduit >= 1.2
                     , conduit-extra >= 1.1.0
                     , resourcet
                     , attoparsec >= 0.10
                     , blaze-builder
                     , xml-conduit >= 1.1.0.0
                     , data-default >= 0.5.0
                     , types
                     , entities
  backpack-includes: entities (Entities as Entities.ByteString) requires (Str as Str.ByteString, Builder as Builder.ByteString, Parser as Parser.ByteString)
  backpack-includes: entities (Entities as Entities.Text) requires (Str as Str.Text, Builder as Builder.Text, Parser as Parser.Text)

test-suite test
    hs-source-dirs: tests
    main-is: Tests.hs
    type: exitcode-stdio-1.0
    build-depends:     base >= 4 && < 5
                     , bytestring
                     , text
                     , conduit >= 1.2
                     , QuickCheck
                     , HUnit
                     , hspec >= 1.3
                     , tagstream-conduit
                     , resourcet
    ghc-options:     -Wall
